# crushr

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  AI_BOOTSTRAP.md  CONTRIBUTING.md  Cargo.toml  Containerfile.musl  LICENSE  PROJECT_STATE.md  README.md  RECOVERY_VALIDATION_CORPUS.md  REPO_GUARDRAILS.md  REPO_LAYOUT.md  REPO_SNAPSHOT.md  REUSE.toml  REVIEW_CHECKLIST.md  ROADMAP.md  SECURITY.md  SPEC.md  TASK_PACKET_TEMPLATE.md  WHITEPAPER_OUTLINE.md  mkdocs.yml  zensical.toml
.ai/: AGENTS_EXECUTION_ENVIRONMENT_SUPPLEMENT.md  BACKLOG.md  CHANGELOG.md  COMPLETION_NOTES_CRUSHR_BENCHMARK_02.md  COMPLETION_NOTES_CRUSHR_BENCHMARK_03.md  COMPLETION_NOTES_CRUSHR_HOSTILE_REVIEW_01.md  COMPLETION_NOTES_CRUSHR_OPTIMIZATION_01.md  COMPLETION_NOTES_CRUSHR_OPTIMIZATION_02.md  COMPLETION_NOTES_CRUSHR_OPTIMIZATION_03.md  COMPLETION_NOTES_CRUSHR_PACK_STREAMING_01.md  COMPLETION_NOTES_CRUSHR_PRESERVATION_02.md  COMPLETION_NOTES_CRUSHR_PRESERVATION_03.md  COMPLETION_NOTES_CRUSHR_PRESERVATION_04.md  DECISION_LOG.md  HANDOFF.md  INDEX.md  PHASE2_LOCKS.md  PHASE_PLAN.md  STATUS.md
.ai/contracts/: CLI_MOTION_POLICY.md  CLI_VISUAL_SEMANTICS.md  ERROR_MODEL.md  EXTRACTION_RESULT_V1.md  FORMAT_STABILITY.md  PERFORMANCE_BUDGETS.md  PROJECT_SCOPE.md  PROPAGATION_GRAPH_V1.md  QUALITY_GATES.md  README.md  SECURITY_MODEL.md  SNAPSHOT_STABILITY.md  STATE_RECONCILIATION.md
.ai/imported_crushr/: CONTEXT_TRANSFER.md  DOCS_STYLE_GUIDE.md  ENGINEERING_CHARTER.md  PHASES.md
.cargo/: audit.toml  config.toml
.github/: FUNDING.yml
.github/workflows/: cargo-audit.yml  ci.yml.pausedwq  deploy_docs.yml  (+3 more)
FORMAT12_RESULTS/: format12_comparison_summary.json
FORMAT13_RESULTS/: format13_comparison_summary.md  format13_stress_comparison_summary.json  format13_stress_comparison_summary.md
FORMAT14A_RESULTS/: format14a_dictionary_resilience_stress_summary.json  format14a_dictionary_resilience_stress_summary.md  format14a_dictionary_resilience_summary.json  format14a_dictionary_resilience_summary.md
FORMAT15_RESULTS/: format15_comparison_summary.json  format15_comparison_summary.md  format15_stress_comparison_summary.json  format15_stress_comparison_summary.md
PHASE2_RESEARCH/: README.md  experiment_manifest.json
TASK_PACKETS/: CRUSHR-0.8-A.md
crates/crushr/: Cargo.toml  build.rs
crates/crushr-cli-common/: Cargo.toml
crates/crushr-cli-common/src/: lib.rs
crates/crushr-core/: Cargo.toml
crates/crushr-core/src/: extraction.rs  impact.rs  io.rs  lib.rs  open.rs  propagation.rs  snapshot.rs  verification_model.rs  verify.rs
crates/crushr-core/tests/: extract_result_schema_v1.rs  first_corruption_experiment.rs  minimal_pack_v1.rs  phase2_execution_schema_contracts_v1.rs  propagation_graph_v1.rs  salvage_plan_schema_v1.rs  snapshot_schema_contracts_v1.rs
crates/crushr-format/: Cargo.toml
crates/crushr-format/src/: blk3.rs  dct1.rs  ftr4.rs  ledger.rs  lib.rs  tailframe.rs  version.rs
crates/crushr-lab/: Cargo.toml
crates/crushr-lab/src/: cli.rs  lib.rs  main.rs  phase2_audit.rs  phase2_comparison.rs  phase2_corruption.rs  phase2_domain.rs  phase2_foundation.rs  phase2_manifest.rs  phase2_normalization.rs  phase2_runner.rs
crates/crushr-tui/: Cargo.toml
crates/crushr-tui/src/: main.rs
crates/crushr/dev/: BUILD.md  Containerfile.build  Containerfile.build.debian  README.md  build.sh  build.toml
crates/crushr/dev/lib/: args.sh  common.sh  config.sh  container.sh  rust.sh
crates/crushr/src/: about.rs  api.rs  cli_app.rs  cli_presentation.rs  cli_ui.rs  dict.rs  extract.rs  extraction_path.rs  extraction_payload_core.rs  format.rs  index_codec.rs  lib.rs  main.rs  pack.rs  progress.rs  read.rs  recover_extract_impl.rs  recovery.rs  recovery_classification.rs  restoration_core.rs  strict_extract_impl.rs  tune.rs  versioning.rs  wrapper_cli.rs
crates/crushr/src/commands/: extract.rs  info.rs  lab.rs  mod.rs  pack.rs  salvage.rs
crates/crushr/src/commands/pack/: discovery.rs  emission.rs  planning.rs
crates/crushr/src/commands/salvage_core/: cli.rs  metadata.rs
crates/crushr/tests/: cli_contract_surface.rs  cli_presentation_contract.rs  comparison_output_schemas.rs  deterministic_pack.rs  extraction_hardening.rs  index_codec.rs  lab_salvage_harness.rs  lab_salvage_redundant_comparison.rs  metadata_preservation.rs  mvp.rs  recovery_extract_contract.rs  recovery_validation_corpus.rs  salvage_experimental_resilience.rs  salvage_redundant_map.rs  version_contract.rs
crates/crushr/tests/golden/: about.txt  info_human.txt  pack.txt  salvage.txt  verify_failure.txt  verify_success.txt
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  DFIR_readiness_plan.md  README.md  ROADMAP.md  SNAPSHOT_FORMAT.md  format-evolution.md  index.md  requirements.txt  testing-harness.md  why-crushr.md
schemas/: crushr-benchmark-run.v1.schema.json  crushr-extract-result.v1.schema.json  crushr-fsck.v1.schema.json  crushr-impact.v1.schema.json  crushr-info.v1.schema.json  crushr-lab-experiment-manifest.phase2.v1.schema.json  crushr-lab-phase2-comparison-tables.v1.schema.json  crushr-lab-phase2-execution-report.v1.schema.json  crushr-lab-phase2-format-rankings.v1.schema.json  crushr-lab-phase2-normalization-summary.v1.schema.json  crushr-lab-phase2-normalized-results.v1.schema.json  crushr-lab-phase2-raw-run-records.v1.schema.json  crushr-lab-salvage-format12-inline-path-comparison.v1.schema.json  crushr-lab-salvage-format12-stress-comparison.v2.schema.json  crushr-lab-salvage-format13-comparison.v1.schema.json  crushr-lab-salvage-format13-stress-comparison.v1.schema.json  crushr-lab-salvage-format14a-dictionary-resilience-stress.v1.schema.json  crushr-lab-salvage-format14a-dictionary-resilience.v1.schema.json  crushr-lab-salvage-format15-stress.v1.schema.json  crushr-lab-salvage-format15.v1.schema.json  crushr-propagation-graph.v1.schema.json  crushr-recovery-manifest.v1.schema.json  crushr-salvage-plan.v1.schema.json  crushr-salvage-plan.v2.schema.json  crushr-salvage-plan.v3.schema.json
scripts/: build-musl-release-podman.sh  build-musl-release.sh  check-crate-policy.sh  check-version-sync.sh  sync-version.sh
(+5612 files in other folders)
