[workspace]
resolver = "2"
members = [
  "crates/crushr-format",
  "crates/crushr-core",
  "crates/crushr-cli-common",
  "crates/crushr",
  "crates/crushr-tui",
  "crates/crushr-lab",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
