[workspace]
resolver = "3"
members = [
  "crates/crushr-format",
  "crates/crushr-core",
  "crates/crushr",
  "crates/crushr-tui",
  "crates/crushr-lab",
]

[workspace.package]
version = "0.2.2"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Richard Majewski"]
repository = "https://github.com/UglyEgg/crushr"
homepage = "https://crushr.entropy.quest/"
documentation = "https://crushr.entropy.quest/"
readme = "README.md"
keywords = ["archive", "compression", "recovery", "forensics", "integrity"]
categories = ["compression", "filesystem", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zstd = "0.13"
clap = { version = "4", features = ["derive", "env"] }

# -------------------------
# Profiles
# -------------------------

[profile.dev]
opt-level = 0
debug = true
incremental = true
lto = false
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
incremental = false
lto = false
codegen-units = 16
strip = "debuginfo"
panic = "abort"

[profile.release-lto]
inherits = "release"
lto = "thin"
codegen-units = 1
