[package]
name = "crushr-cli-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Shared command-line plumbing and presentation helpers for the crushr tool suite."
readme = "../../README.md"
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
