[package]
name = "crushr-core"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "crushr engine: verify/repair/plan over minimal IO traits"

[dependencies]
anyhow.workspace = true
crushr-format = { path = "../crushr-format" }
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true

[dev-dependencies]
jsonschema = "0.18"
