[package]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core verification, extraction, and recovery-graph logic for crushr archives."
readme = "../../README.md"
categories = ["compression", "filesystem"]
keywords.workspace = true

[dependencies]
anyhow.workspace = true
crushr-format = { path = "../crushr-format" }
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true

[dev-dependencies]
jsonschema = "0.18"