[package]
name = "crushr-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core verification, extraction, and recovery-graph logic for crushr archives."
readme = "../../README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
crushr-format = { path = "../crushr-format" }
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true

[dev-dependencies]
jsonschema = "0.18"
