[package]
name = "crushr-format"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "crushr on-disk format: structs, encoding/decoding, invariants"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
