[package]
name = "crushr-format"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "On-disk format types, codecs, and invariants for crushr archives."
readme = "../../README.md"
categories = ["compression", "filesystem"]
keywords.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
