[package]
name = "crushr-format"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "On-disk format types, codecs, and invariants for crushr archives."
readme = "../../README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
