[package]
name = "crushr-lab"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Deterministic research and comparison harness for crushr format experiments."
readme = "../../README.md"
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
