[package]
name = "crushr-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Interactive terminal inspector for crushr archives and snapshots."
readme = "../../README.md"
categories = ["command-line-utilities", "filesystem"]
keywords.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
crushr-core = { path = "../crushr-core" }
crushr = { path = "../crushr" }
