[package]
name = "crushr"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Seekable solid-block archive format + tool suite"
readme = "../../README.md"

[dependencies]
crushr-core = { path = "../crushr-core" }
crushr-format = { path = "../crushr-format" }
indicatif = "0.17"
console = "0.15"
anyhow.workspace = true
blake3.workspace = true
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde.workspace = true
serde_json.workspace = true
rayon = "1"
walkdir = "2"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
xattr = "1"
