[package]
name = "crushr"
autobins = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Deterministic failure-aware archive tool suite with strict verification and recovery research tooling."
readme = "../../README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
crushr-core = { path = "../crushr-core" }
crushr-format = { path = "../crushr-format" }
crushr-lab = { path = "../crushr-lab" }
indicatif = "0.17"
console = "0.15"
anyhow.workspace = true
blake3.workspace = true
clap.workspace = true
clap_complete = "4"
serde.workspace = true
serde_json.workspace = true
rayon = "1"
walkdir = "2"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
xattr = "1"

[[bin]]
name = "crushr"
path = "src/main.rs"

[[bin]]
name = "crushr-pack"
path = "src/bin/crushr-pack.rs"

[[bin]]
name = "crushr-extract"
path = "src/bin/crushr-extract.rs"

[[bin]]
name = "crushr-info"
path = "src/bin/crushr-info.rs"

[[bin]]
name = "crushr-salvage"
path = "src/bin/crushr-salvage.rs"

[[bin]]
name = "crushr-lab-salvage"
path = "src/bin/crushr-lab-salvage.rs"
